Content location fixed

--- a/static/styles/site/style.scss
+++ b/static/styles/site/style.scss
@@ -1,3 +1,6 @@
+.post-index {
+    top:-480px;
+}
 // Colours //
 // ============================================================ //
 // ============================================================ //
