--- a/static/styles/site/style.scss
+++ b/static/styles/site/style.scss
@@ -214,7 +214,7 @@ table {
 
 #wrapper {
   height: auto;
-  min-height: 100%;
+  min-height: 400px;
   /* This must be the same as the height of the footer */
   margin-bottom: -700px;
 
